style.css
html {
    scroll-behavior: smooth;
  }

.container-fluid {
    padding: 0;
}

body {
    font-family:'Times New Roman', Times, serif;
    color: #827C79;
}

/* img {
    width: 100px;
    margin: 10px;
} */

.pink {
    background-color: #DEB8A7;
}

.krem {
    background-color: #B9CFCC;
}

.biru {
    background-color: #A6DADE;
}

.video {
    max-width: 640px;
    max-height: 480px;
}

.content {
    padding-top: 55px;
}

.pesan {
    margin-top: 2rem;
    max-height: 25rem;
    overflow-y: scroll;
}

#diundang {
    margin: 1rem;
}

.bg-gradasi {
    background-image: url("static/img/art/bg\ bottom\ \(kirim\ pesan\ -\ protokol\)-04.svg");
    /* background-repeat: no-repeat; */
    background-size: cover;
}

.bg-top {
    background-image: url("static/img/art/bg\ top\ with\ flower\ no\ photo\ \(beranda\ sd\ galeri\)-03.svg");
    /* background-repeat: no-repeat; */
    background-size: cover;
}

.card {
    background-color: #FFE4C4;
    margin-bottom: 1rem;
}

nav {
    position: fixed;
    background-color: #FFF1E1;
}

.midd {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    overflow-y: auto;
}

.video {
    width: 100%;
}

.stretch {
    display: flex;
    align-items: flex-start;
}

.scrollable {
    min-height: 95vh; /* or any value */
    background-color: #FFF1E1;
    /* margin-bottom: 25px; */
    /* text-align: center;
    // display: flex;
    // justify-content: center;
    // flex-direction: column;
    //overflow-y: auto; */
}

.landing {
    min-height: 95vh; /* or any value */
    background-color: #FFF1E1;
    background-image: linear-gradient( rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25) ), url("static/img/prewed/HWS01596-min.JPG");
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: cover; /* Resize the background image to cover the entire container */
    /* filter: brightness(80%); */
    /* margin-bottom: 1rem; */
}

.header-text {
    margin-top: 8rem;
    font-size: 4rem;
}

.scrollable-half {
    min-height: 45vh; /* or any value */
    /* background-color: #DEB8A7; */
    /* margin-bottom: 25px; */
    /* border-radius: 2rem; */
    /* text-align: center;
    // display: flex;
    // justify-content: center;
    // flex-direction: column;
    //overflow-y: auto; */
}

@font-face {
    font-family: 'Anastasia';
    src: url('static/font/Anastasia.woff2') format('woff2'),
         url('static/font/Anastasia.woff') format('woff'),
         url('static/font/Anastasia.ttf') format('truetype');
}

.font-anastasia {
    font-family: 'Anastasia';
    color: #5A524F;
}

@font-face {
    font-family: 'Hellobaby';
    src: url('static/font/Hellobaby.woff2') format('woff2'),
         url('static/font/Hellobaby.woff') format('woff'),
         url('static/font/Hellobaby.ttf') format('truetype');
}

.font-hellobaby {
    font-family: 'Hellobaby';
    color: #5A524F;
}

@font-face {
    font-family: 'KitchenHome';
    src: url('static/font/KitchenHome.woff2') format('woff2'),
         url('static/font/KitchenHome.woff') format('woff'),
         url('static/font/KitchenHome.ttf') format('truetype');
}

.font-kitchenhome {
    font-family: 'KitchenHome';
    color: #5A524F;
}

